Add font awesome and add icon to main button

--- a/styles.css
+++ b/styles.css
@@ -76,4 +76,27 @@ form button {
   background-color: #489a8a;
   color: var(--text-color);
   font-size: 1rem;
+  cursor: pointer;
+}
+
+.icon::before {
+  display: inline-block;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+
+.fa-circle-minus::before {
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  content: "\f056";
+}
+
+.add-remove-button {
+  color: #ffffff;
+  background: none;
+  border: none;
+  font-size: 2rem;
+  cursor: pointer;
 }
